<resources>
    <string name="app_name">ZmeyGorynych</string>
    <string name="navigation_drawer_open">Открыть навигационное меню</string>
    <string name="navigation_drawer_close">Закрыть навигационное меню</string>
    <string name="nav_home">Главная</string>
    <string name="nav_work">Работа</string>
    <string name="nav_settings">Настройки</string>
    <string name="nav_personnel">Персонал</string>
    <string name="settings_title">Настройки</string>
    <string name="settings_placeholder">Здесь будут настройки приложения</string>
    <string name="appearance_settings">Внешний вид</string>
    <string name="calendar_colors">Цвета календаря</string>
    <string name="selected_day_color">Выделенный день</string>
    <string name="current_day_color">Текущий день</string>
    <string name="weekend_color">Выходные</string>
    <string name="change_color">Изменить</string>
    <string name="theme_settings">Тема</string>
    <string name="light_theme">Светлая</string>
    <string name="dark_theme">Темная</string>
    <string name="system_theme">Системная</string>
    <string name="color_palette">Цветовая палитра</string>
    <string name="color_wheel">Цветовой круг</string>
    <string name="adjust_color">Настройка цвета</string>
    <string name="fine_tune">Точная настройка</string>
    <string name="hue">Оттенок</string>
    <string name="saturation">Насыщенность</string>
    <string name="brightness">Яркость</string>
    <string name="cancel">Отмена</string>
    <string name="ok">ОК</string>
    <string name="appearance_tab">Внешний вид</string>
    <string name="system_tab">Системные</string>
    <string name="spinner_settings">Спиннеры</string>
    <string name="spinner_color">Цвет спиннеров</string>
    <string name="spinner_corner_radius">Закругление спиннеров</string>
    <string name="background_color">Цвет фона</string>
    <string name="card_background_color">Цвет карточек</string>
    <string name="reset_to_default">Сбросить</string>
    <string name="fuel_tab">Топливо</string>
    <string name="fuel_settings">Настройки топлива</string>
    <string name="summer_months">Летние месяцы</string>
    <string name="summer_months_description">Выберите месяцы, которые считаются летними. Остальные месяцы будут зимними.</string>
    <string name="zubov_fuel_consumption">Расход топлива - Зубов</string>
    <string name="skd_fuel_consumption">Расход топлива - СКД</string>
    <string name="summer_fuel">Лето (кг/час)</string>
    <string name="winter_fuel">Зима (кг/час)</string>
    <string name="fuel_consumption_hint">Введите расход топлива</string>
    <string name="month_january">Январь</string>
    <string name="month_february">Февраль</string>
    <string name="month_march">Март</string>
    <string name="month_april">Апрель</string>
    <string name="month_may">Май</string>
    <string name="month_june">Июнь</string>
    <string name="month_july">Июль</string>
    <string name="month_august">Август</string>
    <string name="month_september">Сентябрь</string>
    <string name="month_october">Октябрь</string>
    <string name="month_november">Ноябрь</string>
    <string name="month_december">Декабрь</string>
    <string name="btn_make_an_entry">Внести запись</string>

</resources>